--- a/Rossmann_project.ipynb
+++ b/Rossmann_project.ipynb
@@ -4338,7 +4338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4367,8 +4367,473 @@
     "# Columns to add\n",
     "feat_to_add = ['date', 'sales'] #adicionando novamente essas colunas (retiradas na seção 6.1), pois usarei mais a frente\n",
     "# Final Features\n",
-    "cols_selected_boruta_full = cols_selected_boruta.copy()\n",
-    "cols_selected_boruta_full.extend(feat_to_add)"
+    "#cols_selected_boruta_full = cols_selected_boruta.copy()\n",
+    "#cols_selected_boruta_full.extend(feat_to_add)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7.0. MACHINE LEARNING MODELLING\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df7 = df6.copy()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train = X_train[cols_selected_boruta]\n",
+    "x_test = X_test[cols_selected_boruta]\n",
+    "\n",
+    "# Time Series Preparation\n",
+    "x_training = X_train[cols_selected_boruta_full]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7.1. Average Model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model Name</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>RMSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Avarege Model</td>\n",
+       "      <td>1354.800353</td>\n",
+       "      <td>0.455051</td>\n",
+       "      <td>1835.135542</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Model Name          MAE      MAPE         RMSE\n",
+       "0  Avarege Model  1354.800353  0.455051  1835.135542"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aux1 = x_test.copy()\n",
+    "aux1['sales'] = y_test.copy()\n",
+    "\n",
+    "# prediction\n",
+    "aux2 = aux1[['store', 'sales']].groupby('store').mean().reset_index().rename(columns={'sales': 'predictions'})\n",
+    "aux1 = pd.merge(aux1, aux2, how='left', on='store')\n",
+    "yhat_baseline = aux1['predictions']\n",
+    "\n",
+    "# performance\n",
+    "baseline_result = ml_error('Avarege Model', np.expm1(y_test), np.expm1(yhat_baseline))\n",
+    "baseline_result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7.2. Linear Regression Model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model Name</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>RMSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Linear Regression</td>\n",
+       "      <td>1867.089774</td>\n",
+       "      <td>0.292694</td>\n",
+       "      <td>2671.049215</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Model Name          MAE      MAPE         RMSE\n",
+       "0  Linear Regression  1867.089774  0.292694  2671.049215"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Model\n",
+    "lr = LinearRegression().fit(x_train, y_train)\n",
+    "\n",
+    "# Prediction\n",
+    "yhat = lr.predict(x_test)\n",
+    "\n",
+    "# Performance\n",
+    "lr_result = ml_error('Linear Regression', np.expm1(y_test), np.expm1(yhat))\n",
+    "lr_result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7.2.1. Linear Regression Model - Cross Validation (separando o modelo em várias partes para medir a performance sobre cada uma delas)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model Name</th>\n",
+       "      <th>MAE CV</th>\n",
+       "      <th>MAPE CV</th>\n",
+       "      <th>RMSE CV</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Linear Regression</td>\n",
+       "      <td>2081.73 +/- 295.63</td>\n",
+       "      <td>0.3 +/- 0.02</td>\n",
+       "      <td>2952.52 +/- 468.37</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Model Name              MAE CV       MAPE CV             RMSE CV\n",
+       "0  Linear Regression  2081.73 +/- 295.63  0.3 +/- 0.02  2952.52 +/- 468.37"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr_result_cv = cross_validation(x_training, 5, 'Linear Regression', lr)\n",
+    "lr_result_cv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7.3. Linear Regression Regularized Model - Lasso\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model Name</th>\n",
+       "      <th>MAE</th>\n",
+       "      <th>MAPE</th>\n",
+       "      <th>RMSE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Linear Regression - Lasso</td>\n",
+       "      <td>1891.70488</td>\n",
+       "      <td>0.289106</td>\n",
+       "      <td>2744.451735</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Model Name         MAE      MAPE         RMSE\n",
+       "0  Linear Regression - Lasso  1891.70488  0.289106  2744.451735"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Model\n",
+    "lrr = Lasso(alpha=0.01).fit(x_train, y_train)\n",
+    "\n",
+    "# Prediction\n",
+    "yhat_lrr = lrr.predict(x_test)\n",
+    "\n",
+    "# Performance\n",
+    "lrr_result = ml_error('Linear Regression - Lasso', np.expm1(y_test), np.expm1(yhat_lrr))\n",
+    "lrr_result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7.3.1. Linear Regression Regularized Model - Cross Validation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model Name</th>\n",
+       "      <th>MAE CV</th>\n",
+       "      <th>MAPE CV</th>\n",
+       "      <th>RMSE CV</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Linear Regression Regularized</td>\n",
+       "      <td>2116.38 +/- 341.5</td>\n",
+       "      <td>0.29 +/- 0.01</td>\n",
+       "      <td>3057.75 +/- 504.26</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Model Name             MAE CV        MAPE CV             RMSE CV\n",
+       "0  Linear Regression Regularized  2116.38 +/- 341.5  0.29 +/- 0.01  3057.75 +/- 504.26"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lrr_result_cv = cross_validation(x_training, 5, 'Linear Regression Regularized', lrr)\n",
+    "lrr_result_cv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7.4. Random Forest Regressor\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Model\n",
+    "# O ideal é fazer com 2500 a 3000 estimators\n",
+    "rf = RandomForestRegressor(n_estimators = 100, n_jobs = -1, random_state = 42).fit(x_train, y_train)\n",
+    "\n",
+    "# Prediction\n",
+    "yhat_rf = rf.predict(x_test)\n",
+    "\n",
+    "\n",
+    "# Performance\n",
+    "rf_result = ml_error('Random Forest Regressor', np.expm1(y_test), np.expm1(yhat_rf))\n",
+    "rf_result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7.4.1. Random Forest Regressor Model - Cross Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_result_cv = cross_validation(x_training, 5, 'Random Forest Regressor', rf)\n",
+    "rf_result_cv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7.5. XGBoost Regressor\n",
+    "# Model\n",
+    "model_xgb = xgb.XGBRegressor(\n",
+    "    objective = 'reg:squarederror',\n",
+    "    n_estimators = 100,\n",
+    "    eta = 0.01,\n",
+    "    max_depth = 10,\n",
+    "    subsample=0.7,\n",
+    "    colsample_bytree=0.9\n",
+    ").fit(x_train, y_train)\n",
+    "\n",
+    "# Prediction\n",
+    "yhat_xgb = model_xgb.predict(x_test)\n",
+    "\n",
+    "# Performance\n",
+    "xgb_result = ml_error('XGBRegressor', np.expm1(y_test), np.expm1(yhat_xgb))\n",
+    "xgb_result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7.5.1. XGBoost Regressor Model - Cross Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgb_result_cv = cross_validation(x_training, 5, 'XGBoost Regressor', model_xgb)\n",
+    "xgb_result_cv"
    ]
   }
  ],
